--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,4 +14,5 @@ jobs:
   job1:
     runs-on: ubuntu-latest
     steps:
-      - run: echo "hello world"
+      - run: 'echo "hello world" && echo "wtf"'
+      
